src/objects/ffps_accBalance__BalanceError__c.object
<CustomObject>
    <fields>
        <fullName>ffps_accBalance__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Balance Errors</relationshipLabel>
        <relationshipName>BalanceErrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_accBalance__DateTimeStamp__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Date Time Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffps_accBalance__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffps_accBalance__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Balance Error</label>
    <listViews>
        <fullName>ffps_accBalance__All</fullName>
        <columns>NAME</columns>
        <columns>ffps_accBalance__DateTimeStamp__c</columns>
        <columns>ffps_accBalance__Account__c</columns>
        <columns>ffps_accBalance__Source__c</columns>
        <columns>ffps_accBalance__Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ERR{000000000}</displayFormat>
        <label>Balance Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Balance Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>